-Se Agrego en la pantalla de consulta del cliente el Master Details de ClienteProducto(Consulta todos los Productos de un Cliente).
-La tabla "ventanaAluminio " esta haciendo la funcion de tabla Pedido

--- a/Proyecto/VentanaG/BLL/BLL.csproj
+++ b/Proyecto/VentanaG/BLL/BLL.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ClienteBll.cs" />
     <Compile Include="MaterialesBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProyectoBll.cs" />
     <Compile Include="ScreenBll.cs" />
     <Compile Include="UsuarioBLL.cs" />
     <Compile Include="VentanaAlumiBll.cs" />
